# ic-proj-2

./: .gitignore  CMakeLists.txt  Makefile  golomb_test.bash
images/: airplane_gray.ppm  anemone_gray.ppm  arial_gray.ppm  baboon_gray.ppm  boat_gray.ppm  girl_gray.ppm  house_gray.ppm  lena_gray.ppm  tulips_gray.ppm
include/: golomb.hpp  lossless_audio.hpp  lossless_codec.hpp  lossless_image.hpp
include/bit_stream/src/: CMakeLists.txt  lossy_codec_dec.cpp  lossy_codec_enc.cpp
include/effects/: brightness.hpp  mirror.hpp  negative.hpp  rotate.hpp
src/: cv_extract_channel.cpp  cv_image_effects.cpp  golomb.cpp  golomb_main.cpp  lossless_audio.cpp  lossless_audio_main.cpp  lossless_codec.cpp  lossless_codec_main.cpp  lossless_image.cpp  lossless_image_main.cpp  ppm_to_grayscale.cpp
src/effects/: brightness.cpp  mirror.cpp  negative.cpp  rotate.cpp
